<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_themes">Темная тема</string>
    <string name="Share_app">Поделиться приложением</string>
    <string name="Write_to_support">Написать в поддержку</string>
    <string name="Terms_of_use">Пользовательское соглашение</string>
    <string name="Hi_look">Привет! Посмотри этот крутой курс по Андроид-разработке в Практикуме:</string>
    <string name="practicum_yandex_ru_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="My_mail">ilya_brant@mail.ru</string>
    <string name="send_developer">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="senks">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="pochtovi_client_ne_ystanovlen">Почтовый клиент не установлен</string>
    <string name="practicum_yandex_ru_offerta">https://yandex.ru/legal/practicum_offer/</string>
    <string name="brauser_client_ne_ystanovlen">Браузер не установлен</string>
    <string name="Nothing_found">Ничего не нашлось</string>
    <string name="Communication_problems">"             "Проблемы со связью\n\nЗагрузка не удалась. Проверьте\n"       "подключение к интернету</string>
    <string name="Update">Обновить</string>
    <string name="You_search">Вы искали</string>
    <string name="Clear_history">Очистить историю</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

</resources>